# yuffie

./: .editorconfig  .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yaml  ci.yml
LICENSES/: BSD-2-Clause-Patent.txt
crates/yuffie/: CHANGELOG.md  Cargo.toml  README.md
crates/yuffie-proc-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/yuffie-proc-macros/src/: lib.rs
crates/yuffie/src/: global_alloc.rs  guid.rs  lib.rs  mem.rs  prelude.rs  status.rs
crates/yuffie/src/hii/: animation.rs  device_path.rs  font.rs  forms.rs  guid.rs  ifr.rs  image.rs  keyboard.rs  mod.rs  simple_font.rs  string.rs
crates/yuffie/src/proto/: mod.rs
crates/yuffie/src/proto/console/: edid.rs  graphics.rs  mod.rs  ptr.rs  serial.rs  text.rs
crates/yuffie/src/proto/driver/: adapter_info.rs  bus_override.rs  component_name.rs  diagnostics.rs  driver_binding.rs  driver_family_override.rs  driver_health.rs  driver_supported_version.rs  mod.rs  platform_driver_override.rs  platform_to_driver_config.rs  service_binding.rs
crates/yuffie/src/table/: boot.rs  cfg.rs  mod.rs  runtime.rs  system.rs
docs/: SUMMARY.md  book.toml  contributing.md  index.md  license.md
scripts/: install-deps.sh  install-rust.sh
