[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
edition = "2021"
rust-version = "1.78.0"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/crawfxrd/yuffie"
keywords = ["firmware", "uefi"]
categories = ["embedded", "no-std"]
publish = true

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
