# SPDX-License-Identifier: BSD-2-Clause-Patent
# SPDX-FileCopyrightText: 2025 System76, Inc.

[workspace]
resolver = "2"
members = [
    "crates/yuffie",
    "crates/yuffie-proc-macros",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/crawfxrd/yuffie"
publish = true

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
