# SPDX-License-Identifier: BSD-2-Clause-Patent
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "yuffie-proc-macros"
version = "0.0.1"
description = "Procedural macros for Yuffie"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
