[package]
name = "yuffie"
version = "0.0.1"
description = "A library for creating UEFI applications, libraries, and drivers"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
yuffie-proc-macros = { path = "../yuffie-proc-macros", version = "0", optional = true }

[features]
default = ["alloc", "panic_handler"]
alloc = [] # Provide a default global allocator for Rust code and enable functionality that requires an allocator
panic_handler = [] # Provide a default panic handler
proc_macros = ["yuffie-proc-macros"] # Enable procedural macros
